# rules_go

./: BUILD.bazel
go/: core.rst  def.bzl
go/private/: BUILD.bazel  context.bzl
go/private/rules/: nogo.bzl  transition.bzl
tests/core/nogo/custom/: custom_test.go
